--- a/Tile_based_classification_using_Sentinel_2_L1C_and_EuroSAT_data_Inference.ipynb
+++ b/Tile_based_classification_using_Sentinel_2_L1C_and_EuroSAT_data_Inference.ipynb
@@ -6,7 +6,7 @@
       "name": "Tile-based classification using Sentinel-2 L1C  and EuroSAT data-Inference.ipynb",
       "provenance": [],
       "mount_file_id": "1ybbQTHScMz7y2Gur32DgQOvoFSKQRtWc",
-      "authorship_tag": "ABX9TyNqAhGGuR0kafCyzvAEnSqu",
+      "authorship_tag": "ABX9TyNWQ/dgF2C/bRyP2psGA88O",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -129,7 +129,57 @@
         "\n",
         "## end s3fs import snippet ##"
       ],
-      "execution_count": 1,
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3OB5oBwltcVA"
+      },
+      "source": [
+        "## Begin S3FS Import Snippet ##\n",
+        "import os, sys\n",
+        "s3_home = os.getcwd()\n",
+        "try: sys.path.remove(s3_home) # Remove the S3 from the $path\n",
+        "except Exception: pass\n",
+        "\n",
+        "# current_dir = os.getcwd()\n",
+        "\n",
+        "# os.chdir('/home/jovyan') # Temporarily move to another directory\n",
+        "\n",
+        "# Begin imports #\n",
+        "from tensorflow import keras\n",
+        "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+        "from tensorflow.keras.models import Sequential\n",
+        "from tensorflow.keras.layers import Dense, Dropout, Activation, Flatten\n",
+        "from tensorflow.keras.layers import Conv2D, MaxPooling2D\n",
+        "from tensorflow.keras.callbacks import ModelCheckpoint\n",
+        "\n",
+        "import glob\n",
+        "\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import seaborn as sns\n",
+        "\n",
+        "from osgeo import gdal_array\n",
+        "from matplotlib import pyplot as pyplot\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "from sklearn import metrics\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "import zipfile\n",
+        "# end imports #\n",
+        "\n",
+        "# os.chdir(current_dir) # go back to your previous dir\n",
+        "\n",
+        "# sys.path.append(s3_home) # restore the s3 root in the $path\n",
+        "\n",
+        "## end s3fs import snippet ##\n",
+        "\n"
+      ],
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -259,7 +309,7 @@
         "\n",
         "  return stack_10m_final_sorted, stack_20m_final_sorted, stack_60m_final_sorted"
       ],
-      "execution_count": 2,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -300,7 +350,7 @@
         "    \n",
         "    return stack_sorted"
       ],
-      "execution_count": 3,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -350,7 +400,7 @@
         "\n",
         "    return stack_10m"
       ],
-      "execution_count": 4,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -413,7 +463,7 @@
         "    sentinel2[:, :, 11] = total_stack[:, :, 7]\n",
         "    sentinel2[:, :, 12] = total_stack[:, :, 8]"
       ],
-      "execution_count": 5,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -422,6 +472,7 @@
         "id": "2rf5SvGdpOko"
       },
       "source": [
+        "\n",
         "'''\n",
         "function name:\n",
         "  sentinel2_format\n",
@@ -467,7 +518,7 @@
         "    sentinel2[:, :, 11] = total_stack[:, :, 7]\n",
         "    sentinel2[:, :, 12] = total_stack[:, :, 8]"
       ],
-      "execution_count": 12,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -522,7 +573,7 @@
         "\n",
         "    return windows"
       ],
-      "execution_count": 13,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -550,7 +601,7 @@
         "data_input['sentinel2_safe_name'] = 'S2A_MSIL1C_20210331T100021_N0300_R122_T33TTG_20210331T113321.SAFE/'\n",
         "data_input['sentinel2_safe_path'] = data_input['main_path']+'01_Input_data/S2_tile_4_inference/' + data_input['sentinel2_safe_name']"
       ],
-      "execution_count": 14,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -576,14 +627,14 @@
           "height": 633
         },
         "id": "Hmcdhnv7ptht",
-        "outputId": "2b41ac08-d6bd-40bf-fead-52cea4e01ead"
+        "outputId": "49397824-8c8d-442c-ffd3-b5ee8fecbbac"
       },
       "source": [
         "import numpy as np\n",
         "safe_path = data_input['sentinel2_safe_path']\n",
         "stack_10m, stack_20m, stack_60m = from_folder_to_stack(safe_path)"
       ],
-      "execution_count": 15,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
@@ -614,9 +665,9 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-15-ac586fb8c50b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0msafe_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata_input\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'sentinel2_safe_path'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mstack_10m\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstack_20m\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstack_60m\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfrom_folder_to_stack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msafe_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-2-63b678e65515>\u001b[0m in \u001b[0;36mfrom_folder_to_stack\u001b[0;34m(safe_path, data_bands_20m, data_bands_60m)\u001b[0m\n\u001b[1;32m     88\u001b[0m   \u001b[0msorted_list_10m\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'02'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'03'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'04'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'08'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     89\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'[AI4EO_MOOC]_log: Sorting stack 10m...'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 90\u001b[0;31m   \u001b[0mstack_10m_final_sorted\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstack_sort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstack_10m\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlst_code_10m\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msorted_list_10m\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     91\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     92\u001b[0m   \u001b[0mstack_20m\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlst_stack_20m\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-3-99f7efa1a179>\u001b[0m in \u001b[0;36mstack_sort\u001b[0;34m(stack_in, lst_code, sorted_list)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mstack_sort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstack_in\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlst_code\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msorted_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m   \u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstack_in\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m   \u001b[0mstack_sorted\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munit16\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m   \u001b[0mlen_list_bands\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlst_code\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-35-ac586fb8c50b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0msafe_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata_input\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'sentinel2_safe_path'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mstack_10m\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstack_20m\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstack_60m\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfrom_folder_to_stack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msafe_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-28-63b678e65515>\u001b[0m in \u001b[0;36mfrom_folder_to_stack\u001b[0;34m(safe_path, data_bands_20m, data_bands_60m)\u001b[0m\n\u001b[1;32m     88\u001b[0m   \u001b[0msorted_list_10m\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'02'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'03'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'04'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'08'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     89\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'[AI4EO_MOOC]_log: Sorting stack 10m...'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 90\u001b[0;31m   \u001b[0mstack_10m_final_sorted\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstack_sort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstack_10m\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlst_code_10m\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msorted_list_10m\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     91\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     92\u001b[0m   \u001b[0mstack_20m\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlst_stack_20m\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-29-99f7efa1a179>\u001b[0m in \u001b[0;36mstack_sort\u001b[0;34m(stack_in, lst_code, sorted_list)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mstack_sort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstack_in\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlst_code\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msorted_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m   \u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstack_in\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m   \u001b[0mstack_sorted\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munit16\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m   \u001b[0mlen_list_bands\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlst_code\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/numpy/__init__.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(attr)\u001b[0m\n\u001b[1;32m    213\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    214\u001b[0m                 raise AttributeError(\"module {!r} has no attribute \"\n\u001b[0;32m--> 215\u001b[0;31m                                      \"{!r}\".format(__name__, attr))\n\u001b[0m\u001b[1;32m    216\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    217\u001b[0m         \u001b[0;32mdef\u001b[0m \u001b[0m__dir__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;31mAttributeError\u001b[0m: module 'numpy' has no attribute 'unit16'"
           ]
@@ -702,8 +753,48 @@
         "id": "RGz0oluv89IP"
       },
       "source": [
-        "#**3. Reorder the bands according to the order of the pretrained model**"
+        "#**3. Reorder the bands according to the order of the pretrained model**\n",
+        "\n",
+        "The three array stack now have the same spatial resolution. In a next step, we'll concatenate them with the numpy function `concatenate`. We want to concatenate them on the band dimensions (axis=2). The result is one array with a spatial resolution of 10m and 13 bands."
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XMY0AAOLG9dR"
+      },
+      "source": [
+        "print('(AI4EO_MOOC)_log: Creating multistack with 10-20-60 m pixel size')\n",
+        "\n",
+        "total_stack=np.concatenate((stack_10m, stack_20mTo10m, stack_60mTo10m),\n",
+        "                           axis=2)\n",
+        "\n",
+        "total_stack.shape"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6r22YiboHswz"
+      },
+      "source": [
+        "You cannow plot the reflectance for each band for one pixel with matplotlib's `plot()` function."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "b1q-1g6iH-zK"
+      },
+      "source": [
+        "plt.ylabel(\"Refelectance\")\n",
+        "plt.xlabel(\"Band\")\n",
+        "plt.plot(total_stack[200,200,:1],'-o')"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
